🐛 FIX: Uneven border radius on project preview image

--- a/src/scss/components/_project-display.scss
+++ b/src/scss/components/_project-display.scss
@@ -7,12 +7,15 @@
 	transition: background-color 250ms ease-in-out;
 
 	&__preview {
-		border-radius: 1.5rem;
-		aspect-ratio: 16 / 9;
-		object-fit: cover;
-		object-position: top;
 		padding: 1rem 1rem 0;
-		width: 100%;
+
+		img {
+			border-radius: 1rem;
+			aspect-ratio: 16 / 9;
+			object-fit: cover;
+			object-position: top;
+			width: 100%;
+		}
 	}
 
 	&__info {
